src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 22px;
}

body {
  font-family: 'Roboto', sans-serif;
  -webkit-font-smoothing: antialiased;
}

.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 100vh; 
  width: 100%; 
  margin: auto;
}

.tabs {
  position: relative;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  background: #003642;
  padding: 1rem 0rem 2.5rem;
  color: #ffffff;
 }

 .settingsButton {
  position: absolute;
  top: 2rem;
  right: 5%;
 }
 

 /* Tab Navigation */
ul.nav {
  width: 60%;
  margin-bottom: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: 1px solid #39A2DB;
  border-radius: 10px;
  padding-left: 0px;
}

@media screen and (max-width: 768px) {
  ul.nav {
    width: 70%;
    font-size: 15px;
  }
}

ul.nav li {
  width: 50%;
  padding: 1rem;
  list-style: none;
  text-align: center;
  cursor: pointer;
  transition: all 0.5s;
  border-bottom-left-radius: 8px;
  border-top-left-radius: 8px;
}
ul.nav li:nth-child(2) {
  border-radius: 0;
  border-bottom-right-radius: 8px;
  border-top-right-radius: 8px;
}
ul.nav li:hover {
  background: rgba(50, 224, 196, 0.15);
}
ul.nav li.active {
  background: #39A2DB;
}

.tabs, .outlet {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%; 
  width: 100%; 
}

.inputTab {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%; 
  width: 100%;
  max-width: 800px; 
}

.input, .outputSection {
  width: 90%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;

}

.input {
  padding-bottom: 10px;
}

.input input[type=text] {
  width: 100%; 
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-top: 6px;
  margin-bottom: 16px;
}

.input button {
  font: inherit;
  width: 100%;
  padding: 0.5rem 0 0.5rem 0;
}

.outputSection {
  height: 100%;
  position: relative;
  margin-bottom: 15px;
  justify-content: space-between;
}

.outputTitle {
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  font-size: 15px;
  font-weight: bold;
}

.output {
  display: flex;
  resize: vertical;
  flex-direction: column;
  margin-bottom: 20px;
  width: 100%;
  height: 200px;
  overflow: auto;
  overflow-y: auto;
  background: whitesmoke;
  color: black;
}

.notActive {
  display: none;
}

.output .from, .output .data {
  padding-left: 8px;
  padding-right: 8px;
  width: 100%;
  background: whitesmoke;
}

.output .from {
  padding-top: 8px;
  color: grey;
  font-size: 12px;
  font-weight: bold;
}

.output .data {
  font-size: 18px;
  padding-bottom: 8px;
}

.clearBtn {
  font: inherit;
  width: 100%;
  height: 50px;
  justify-content: center;
  align-items: center;
}

.buttonTab {
  width: 95%;
}

.statusMsg {
  text-align: center;
}

.buttonFeed {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr) ) ;
  grid-gap: 15px;
}

.buttonFeed .button {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: center;
  background-color: #8b0000;
  color: whitesmoke;
  border: none;
  border-radius: 10px;
  padding: 10px;
  height: 3.5rem;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  font-size: 18px;
  transition: all 0.5s;
}

.buttonFeed .button:hover, .buttonFeed .buttonAdd:hover  {
  filter: brightness(1.10);
}

.buttonFeed .button .buttonDescription {
  min-height: 18px;
}

.buttonFeed .button .buttonDest {
  font-size: 12px;
  font-weight: bold;
}

.buttonFeed .buttonAdd {
  color: whitesmoke;
  border: none;
  border-radius: 10px;
  padding: 10px;
  height: 3.5rem;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  font-size: 18px;
  transition: all 0.5s;
  font-size: 50px;
  font-weight: bold;
  text-align: center;
  background-color: #39A2DB;
}

.buttonFeed .deleteButton, .buttonFeed .upButton, .buttonFeed .downButton {
  position: absolute;
  top: 8px;
  right: 10px;
  text-align: center;
  background-color: black;
  color: whitesmoke;
  border-radius: 5px;
  padding-top: 1px;
  height: 0.8rem;
  width: 0.8rem;
  white-space: nowrap;
  overflow: hidden;
  cursor: pointer;
  font-size: 14px;
}

.buttonFeed .deleteButton {
  background-color: red;
}

.buttonFeed .upButton {
  top: 30px;
  background-color: green;
}

.buttonFeed .downButton {
  top: 52px;
  background-color: green;
}

.newButtonInput {
  grid-column: 1/-1;
}

.newButtonInput .newButtonForm {
  display: grid;
  gap: 5px;
  grid-template-columns: 1fr 1fr;
}

@media screen and (max-width: 768px) {
  .newButtonInput .newButtonForm {
      grid-template-columns: 1fr;
  }
}

.newButtonInput .newButtonForm input[type=text] {
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;  
}

.newButtonInput .newButtonForm button {
  font: inherit;
  margin-left: 20%;
  margin-right: 20%;
  background-color: #39A2DB;
  color: whitesmoke;
  border-radius: 5px;
}

